# -Snake-Game-in-10-Programming-Languages

./: README.md
cpp/01_simple/: Makefile  README.md
cpp/01_simple/include/: snake.h
cpp/01_simple/src/: snake.cpp
cpp/02_medium/: CMakeLists.txt  README.md
cpp/02_medium/include/: Food.h  ScoreManager.h  Snake.h
cpp/02_medium/src/: Food.cpp  Game.cpp  ScoreManager.cpp  Snake.cpp
cpp/03_advanced/: README.md
cpp/03_advanced/include/: DatabaseManager.h  Food.h  PowerUp.h  SettingsManager.h  Snake.h  Wall.h
cpp/03_advanced/src/: DatabaseManager.cpp  Food.cpp  GameEngine.cpp  PowerUp.cpp  SettingsManager.cpp  Snake.cpp  Wall.cpp  main.cpp
cpp/03_advanced/ui/: MainWindow.ui
csharp/01_simple/: README.md  SnakeGame.cs
csharp/02_medium/: Food.cs  GameEngine.cs  MainForm.cs  Program.cs  README.md  ScoreManager.cs  Snake.cs  SnakeGame.csproj
csharp/03_advanced/: Readme.md
csharp/03_advanced/Helpers/: RelayCommand.cs
csharp/03_advanced/SnakeGame/: App.xaml  App.xaml.cs
csharp/03_advanced/SnakeGame/Models/: Food.cs  GameModel.cs  PowerUp.cs  Snake.cs  Wall.cs
java/01_simple/: README.md
java/02_medium/: README.md
java/03_advanced/: README.md
javascript/01_simple/: README.md  snake.js
javascript/02_medium/: README.md  game.js  style.css
javascript/03_advanced/: README.md  package.json
javascript/03_advanced/src/: App.tsx  styles.css
python/: README.md
python/01_simple/: README.md  snake.py
python/02_medium/: README.md  snake.py
python/03_advanced/: README.md  database.py  food.py  game.py  main.py  snake.py
(+34 files in other folders)
